--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:onClick="incrementWater"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/ic_glass" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/default_water_count"
+                android:textStyle="bold"
                 android:textColor="#424242"
                 android:textSize="35sp" />
 
@@ -85,4 +86,10 @@
             android:text="@string/default_charge_notification_count" />
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/testNofication"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test"/>
 </LinearLayout>
