--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,10 +69,11 @@
 
         <ImageView
             android:id="@+id/iv_power_increment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:contentDescription="@string/charging_plug_content_desc"
-            android:src="@drawable/ic_cloud_black_24dp" />
+            android:src="@drawable/plug"
+           />
 
         <TextView
             android:id="@+id/tv_charging_reminder_count"
@@ -91,5 +92,6 @@
         android:id="@+id/testNofication"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Test"/>
+        android:text="Test"
+        android:visibility="invisible"/>
 </LinearLayout>
